# ipyvizzu

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  dev-requirements.in  dev-requirements.txt  draft-pyproject.toml  eslint.config.mjs  index.html  ipyvizzu.js  ipyvizzu.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini  versions.json
.github/workflows/: cd.yml  ci.yml  cicd.yml  doc.yml  init.yml  makefile.yml  release.yml
.streamlit/: config.toml
0.14/: 404.html  index.html  index.md  objects.inv  sitemap.xml
0.14/CHANGELOG/: CHANGELOG.md  index.html
0.14/CODE_OF_CONDUCT/: CODE_OF_CONDUCT.md  index.html
0.14/CONTRIBUTING/: CONTRIBUTING.md  index.html
0.14/LICENSE/: LICENSE.md  index.html
0.14/coverage/: .coverage  coverage.md  covindex.html  d_a2504ae9256e93cf___init___py.html  d_a2504ae9256e93cf_animation_py.html  d_a2504ae9256e93cf_animationcontrol_py.html  d_a2504ae9256e93cf_chart_py.html  d_a2504ae9256e93cf_event_py.html  d_a2504ae9256e93cf_json_py.html  d_a2504ae9256e93cf_method_py.html  d_a2504ae9256e93cf_schema_py.html  d_a2504ae9256e93cf_template_py.html  d_e4160fbd6f03109f___init___py.html  d_e4160fbd6f03109f_fugue_py.html  index.html  status.json
0.14/dev/: index.html  index.md
0.14/environments/: index.html  index.md
0.14/examples/: index.html
0.14/installation/: index.html  installation.md
0.14/search/: search_index.json
0.14/showcases/: index.html  index.md
0.14/tutorial/: index.html  index.md
0.15/: 404.html  index.html  objects.inv  sitemap.xml
0.15/CODE_OF_CONDUCT/: index.html
0.15/CONTRIBUTING/: index.html
0.15/LICENSE/: index.html
0.15/coverage/: .coverage  covindex.html  d_a2504ae9256e93cf___init___py.html  d_a2504ae9256e93cf_animation_py.html  d_a2504ae9256e93cf_animationcontrol_py.html  d_a2504ae9256e93cf_chart_py.html  d_a2504ae9256e93cf_event_py.html  d_a2504ae9256e93cf_json_py.html  d_a2504ae9256e93cf_method_py.html  d_a2504ae9256e93cf_schema_py.html  d_a2504ae9256e93cf_template_py.html  d_e4160fbd6f03109f___init___py.html  d_e4160fbd6f03109f_fugue_py.html  index.html  status.json
0.15/dev/: index.html
0.15/environments/: index.html
0.15/examples/: index.html
0.15/installation/: index.html
0.15/search/: search_index.json
0.15/showcases/: index.html
0.15/tutorial/: index.html
0.16/: 404.html  index.html  objects.inv  sitemap.xml
0.16/CODE_OF_CONDUCT/: index.html
0.16/CONTRIBUTING/: index.html
0.16/LICENSE/: index.html
0.16/coverage/: covindex.html  d_5eaac4b307c3660d___init___py.html  d_5eaac4b307c3660d_converter_py.html  d_5eaac4b307c3660d_protocol_py.html  d_5f6e5cbc5aad0093___init___py.html  d_5f6e5cbc5aad0093_converter_py.html  d_5f6e5cbc5aad0093_defaults_py.html  d_6d7de5cebb9b8da4___init___py.html  d_6d7de5cebb9b8da4_converter_py.html  d_6d7de5cebb9b8da4_type_alias_py.html  d_a2504ae9256e93cf___init___py.html  d_a2504ae9256e93cf___version___py.html  d_a2504ae9256e93cf_animation_py.html  d_a2504ae9256e93cf_animationcontrol_py.html  d_a2504ae9256e93cf_chart_py.html  d_a2504ae9256e93cf_event_py.html  d_a2504ae9256e93cf_json_py.html  d_a2504ae9256e93cf_method_py.html  d_a2504ae9256e93cf_schema_py.html  d_a2504ae9256e93cf_template_py.html  d_aee36f9ef94a4607___init___py.html  d_aee36f9ef94a4607_infer_type_py.html  d_aee36f9ef94a4607_type_alias_py.html  d_d6326b0b59bf5348___init___py.html  d_d6326b0b59bf5348_converter_py.html  d_d6326b0b59bf5348_defaults_py.html  d_d6326b0b59bf5348_type_alias_py.html  d_e4160fbd6f03109f___init___py.html  d_e4160fbd6f03109f_fugue_py.html  d_e7026b8183f54886___init___py.html  d_e7026b8183f54886_converter_py.html  d_e7026b8183f54886_protocol_py.html  index.html  status.json
0.16/dev/: index.html
0.16/environments/: index.html
0.16/examples/: index.html
0.16/installation/: index.html
0.16/search/: search_index.json
0.16/showcases/: index.html
0.16/tutorial/: animation_control_keyframes.js  animation_options.js  chart_presets.js  events.js  filter_add_new_records.js  index.html  shorthands_store.js
0.17/: 404.html  index.html  objects.inv  sitemap.xml
0.17/CODE_OF_CONDUCT/: index.html
0.17/CONTRIBUTING/: index.html
0.17/LICENSE/: index.html
0.17/coverage/: covindex.html  d_5eaac4b307c3660d___init___py.html  d_5eaac4b307c3660d_converter_py.html  d_5eaac4b307c3660d_protocol_py.html  d_5f6e5cbc5aad0093___init___py.html  d_5f6e5cbc5aad0093_converter_py.html  d_5f6e5cbc5aad0093_defaults_py.html  d_6d7de5cebb9b8da4___init___py.html  d_6d7de5cebb9b8da4_converter_py.html  d_6d7de5cebb9b8da4_type_alias_py.html  d_a2504ae9256e93cf___init___py.html  d_a2504ae9256e93cf___version___py.html  d_a2504ae9256e93cf_animation_py.html  d_a2504ae9256e93cf_animationcontrol_py.html  d_a2504ae9256e93cf_chart_py.html  d_a2504ae9256e93cf_event_py.html  d_a2504ae9256e93cf_json_py.html  d_a2504ae9256e93cf_method_py.html  d_a2504ae9256e93cf_schema_py.html  d_a2504ae9256e93cf_template_py.html  d_aee36f9ef94a4607___init___py.html  d_aee36f9ef94a4607_infer_type_py.html  d_aee36f9ef94a4607_type_alias_py.html  d_d6326b0b59bf5348___init___py.html  d_d6326b0b59bf5348_converter_py.html  d_d6326b0b59bf5348_defaults_py.html  index.html  status.json  (+6 more)
0.18/: 404.html  index.html  objects.inv  sitemap.xml
community/: Agnes_file.txt  ChangeDimension.ipynb  Compare.ipynb  Distribute.ipynb  DrillDown.ipynb  Filter.ipynb  Miscellaneous.ipynb  PresetCharts.ipynb  Split.ipynb  StretchToProportion.ipynb  Sum.ipynb  color-blindness_theme.ipynb  dark_theme.ipynb  maja.txt  ujtext.txt
docs/: CNAME  conf.py  doc.html  doc.ipynb  index.html  index.ipynb  index.rst  installation.md  options.html  options.ipynb
latest/: 404.html  index.html
tests/: __init__.py  animation.py  chart.py  json.py  method.py  normalizer.py  test_animation.py  test_animationcontrol.py  test_chart.py  test_doc.py  test_fugue.py  test_ipyvizzu.py  test_json.py  test_jupyter_chart.py  test_manual_chart.py  test_method.py  test_notebooks.py
(+2819 files in other folders)
